<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:paddingBottom="@dimen/activity_vertical_margin"
                tools:context="fr.alainmuller.androidtestsample.app.ui.activity.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_alignParentTop="true">

        <EditText
            android:singleLine="true"
            android:id="@+id/et_main_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:hint="@string/hint"
            android:layout_weight="1"/>

        <Button
            android:id="@+id/btn_main_go"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_text"
            android:layout_gravity="center_vertical"
            android:onClick="sayHello"
            />
    </LinearLayout>

    <TextView
        android:id="@+id/tv_message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:textSize="40sp"/>

</RelativeLayout>
